--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "v-tooltip": "^2.1.3",
     "vue": "^3.0.0-beta.1",
-    "vue-clickaway": "^2.2.2",
     "vue-router": "^4.0.0-alpha.6",
     "vue-supabase": "^1.0.4",
     "vuex": "^4.0.0-alpha.1"
@@ -24,7 +23,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.13",
     "@vue/cli-plugin-eslint": "~4.5.13",
-    "@vue/cli-plugin-router": "~4.5.13",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.13",
     "@vue/cli-service": "~4.5.13",
     "@vue/compiler-sfc": "^3.0.0-beta.1",
@@ -34,7 +33,6 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0-alpha.0",
     "prettier": "^2.2.1",
-    "vue-cli-plugin-tailwind": "~2.0.6",
-    "vue-cli-plugin-vue-next": "~0.1.4"
+    "vue-cli-plugin-tailwind": "~2.0.6"
   }
 }
